update css has issue with responsive on mobile

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 body { 
@@ -8,7 +9,7 @@ body {
         font-family: "Abril Fatface", serif;
         font-weight: 400;
         font-style: normal;
-      }
+    }
 
     .alata-regular {
     font-family: "Alata", sans-serif;
@@ -16,8 +17,7 @@ body {
     font-style: normal;
     }
       
-    }
-
+}
 
 
 /*--Nav Section--*/
@@ -31,7 +31,7 @@ body {
 .navbar {
     background-image: linear-gradient(to top, #D3B694, #AA9E39);
     padding: 1 !important;
-    background-size: auto;
+    background-size: cover;
 }
 
 .navbar-nav li {
@@ -70,7 +70,7 @@ body {
 
 #banner-photo {
     height: 550px;
-    width: 450px;
+    width: auto;
     border-radius: 10px;
     border: 3px solid #fff;
 }
